// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnimatedItem should render successfully 1`] = `
.c0 {
  --itemSize: 20%;
  position: absolute;
  opacity: 0;
  width: 100%;
  height: 100%;
  animation: 12.934647558342018s horizontal-movement 1.522062212116881s linear infinite;
}

.c1 {
  position: absolute;
  width: 100%;
  height: 100%;
  display: grid;
  place-items: center;
  --translateY-begin: -34%;
  --translateY-end: 18%;
  animation: 5.070044212504139s vertical-movement ease-in-out alternate infinite;
}

.c2 {
  position: absolute;
  z-index: 5;
  transform-origin: center;
  height: var(--itemSize);
  aspect-ratio: 1/1;
}

.c2::after {
  content: '';
  width: 100%;
  height: 100%;
  border-radius: 50%;
  overflow: hidden;
  display: block;
  background: #7fa37a;
}

<body>
  <div>
    <div
      class="c0"
      role="presentation"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
          role="none"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`AnimatedItem should render successfully with a rotation and no path 1`] = `
.c0 {
  --itemSize: 20%;
  position: absolute;
  opacity: 0;
  width: 100%;
  height: 100%;
  animation: 12.934647558342018s horizontal-movement 1.522062212116881s linear infinite;
}

.c1 {
  position: absolute;
  width: 100%;
  height: 100%;
  display: grid;
  place-items: center;
  --translateY-begin: -34%;
  --translateY-end: 18%;
  animation: 5.070044212504139s vertical-movement ease-in-out alternate infinite;
}

.c2 {
  position: absolute;
  z-index: 5;
  transform-origin: center;
  height: var(--itemSize);
  aspect-ratio: 1/1;
  --rotation: calc(               1 *                 360deg             );
  animation: 3.0889862130244072s rotate-movement linear infinite;
}

.c2::after {
  content: '';
  width: 100%;
  height: 100%;
  border-radius: 50%;
  overflow: hidden;
  display: block;
  background: #7fa37a;
}

<body>
  <div>
    <div
      class="c0"
      role="presentation"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
          role="none"
        />
      </div>
    </div>
  </div>
</body>
`;
